--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Tg- @cric_stream</title>
+    <title>CineArena.live</title>
     <link rel="shortcut icon" href="#">
     <meta name="robots" content="noindex, nofollow, noarchive">
     <style>
