--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>CineArena.live</title>
-    <link rel="shortcut icon" href="fav1.png">
+    <link rel="shortcut icon" href="#">
     <meta name="robots" content="noindex, nofollow, noarchive">
     <style>
         body {
