--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
         
 
         <div class='directory-item'>
-            <a href='star1hindi.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='star1hindi.html'>IPL Hindi</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_HIN_IDC_MOB/Fallback/index.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_HIN_IDC_MOB/Fallback/index.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='ipleng.html'><img src='ipleng.jpg' alt='IPL English'></a>
