--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_HIN_IDC_MOB/Fallback/index.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='ipleng.html'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='ipleng.html'>IPL English</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_ENG_IDC_MOB/Fallback/index.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_ENG_IDC_MOB/Fallback/index.m3u8'>IPL English</a></div>
 
         <div class='directory-item'>
             <a href='ipltamil.html'><img src='tamil.jpg' alt='IPL Tamil'></a>
