--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_ENG_IDC_MOB/Fallback/index.m3u8'>IPL English</a></div>
 
         <div class='directory-item'>
-            <a href='ipltamil.html'><img src='tamil.jpg' alt='IPL Tamil'></a>
-            <a href='ipltamil.html'>IPL Tamil</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_TAM_IDC_MOB/Fallback/index.m3u8'><img src='tamil.jpg' alt='IPL Tamil'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_TAM_IDC_MOB/Fallback/index.m3u8'>IPL Tamil</a></div>
 
         <div class='directory-item'>
             <a href='ipltelgu.html'><img src='telgu.jpg' alt='IPL Telgu'></a>
