--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_TAM_IDC_MOB/Fallback/index.m3u8'>IPL Tamil</a></div>
 
         <div class='directory-item'>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'>IPL Bhojpuri</a></div>
+
+        <div class='directory-item'>
             <a href='ipltelgu.html'><img src='telgu.jpg' alt='IPL Telgu'></a>
             <a href='ipltelgu.html'>IPL Telugu</a></div>
 
