--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
             <a href='willow2eng.html'>Willow 2 English</a></div>
          --> 
         <div class='directory-item'>
-            <a href='star1hindi.html'><img src='star1hd.jpg' alt='Star 1 HD'></a>
-            <a href='star1hindi.html'>Star Sports1 Hindi</a></div>
+            <a href='https://cricstream4u.github.io/nplayer/?url=https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002'><img src='star1hd.jpg' alt='Star 1 HD'></a>
+            <a href='https://cricstream4u.github.io/nplayer/?url=https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002'>Star Sports1 Hindi</a></div>
         <!--
         <div class='directory-item'>
             <a href='starsports2hindi.html'><img src='star2.jpg' alt='Star Sports 2'></a>
