--- a/index.html
+++ b/index.html
@@ -288,6 +288,11 @@
             <a href='tnt1.html'><img src='tnt1.jpg' alt='TNT 1'></a>
             <a href='tnt1.html'>TNT Sports 1</a></div>
         
+        <div class='directory-item'>
+            <a href='https://cricstream4u.github.io/tnt-sports2/'><img src='tnt2.jpg' alt='TNT 2'></a>
+            <a href='https://cricstream4u.github.io/tnt-sports2/'>TNT Sports 2</a></div>
+
+        
         <!--
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/willow/'><img src='willow.jpg' alt='Fancode Live Events'></a>
