--- a/index.html
+++ b/index.html
@@ -307,6 +307,10 @@
       
            </div>
 
+	<!-- Vast ads -->
+	<iframe src="https://cinearena.live/vastads.html" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+	
+
     <br>
 	<br>
 	<br>
