--- a/vastads.html
+++ b/vastads.html
@@ -19,7 +19,7 @@
     var player = videojs('video_ad_player');
     
     player.ima({
-      adTagUrl: 'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&gdfp_req=1&output=vast&unviewed_position_start=1&env=vp&impl=s&correlator='
+      adTagUrl: 'https://kupsashuda.com/d/mMFVz.drGaNavYZvGXUJ/-ejmj9/uRZQUrlakHPlTuY/yJMbz/E/4qODDYcytFNnjHIQzHMxTjgT4dO/CoZBslahWe1FpcdjDN0Wxy'
     });
 
     player.ready(function () {
