--- a/index.html
+++ b/index.html
@@ -307,11 +307,20 @@
       
            </div>
 
-	<!-- Vast ads -->
-	<iframe src="https://cinearena.live/vastads.html" width="640" height="360" frameborder="0" allowfullscreen></iframe>
-	
-
-    <br>
+	<!-- Vast slider ads -->
+	<script>
+           (function(jqp){
+           var d = document,
+           s = d.createElement('script'),
+           l = d.scripts[d.scripts.length - 1];
+           s.settings = jqp || {};
+           s.src = "\/\/thagrechulo.com\/bGX.VBshdlGzly0aYwWpcv\/He-mh9Pu_Z\/UplHk\/P\/TUYeyYNoDfIe4HMWzUcwtsN_jdIw0YMsjmg\/zLO\/AZ";
+           s.async = true;
+           s.referrerPolicy = 'no-referrer-when-downgrade';
+           l.parentNode.insertBefore(s, l);
+           })({})
+	</script>
+        <br>
 	<br>
 	<br>
 
