--- a/movies.html
+++ b/movies.html
@@ -212,21 +212,21 @@
         <h3>Latest Released Movie</h3>
         <div class="movie-grid" id="movieGrid">
             <div class="movie-card" data-title="Movie Title 2">
-              <a href="">
+              <a href="https://cinearena.github.io/The-Diplomat-Full-Movie/">
                 <img src="download (6).jpeg" alt="Movie 2">
                 <h4>The Deplomat (2025) Full Movie 1080p</h4>
               </a>
-              <a href="">
+              <a href="https://cinearena.github.io/The-Diplomat-Full-Movie/">
                 <button class="watch-btn">Watch Now</button>
               </a>
             </div>
           
             <div class="movie-card" data-title="Movie Title 1">
-              <a href="">
+              <a href="https://cinearena.github.io/Sikandar-DVD-HQ/">
                 <img src="download (7).jpeg" alt="Movie 1">
                 <h4>Sikandar (2025) Full Movie 1080p</h4>
               </a>
-              <a href="">
+              <a href="https://cinearena.github.io/Sikandar-DVD-HQ/">
                 <button class="watch-btn">Watch Now</button>
               </a>
             </div>
