--- a/movies.html
+++ b/movies.html
@@ -223,7 +223,7 @@
           
             <div class="movie-card" data-title="Movie Title 1">
               <a href="https://cinearena.github.io/Sikandar-DVD-HQ/">
-                <img src="https://fivesimilarlyrepel.com/j3xqzyn1gw?affn=60&refer=https%3A%2F%2Fhdhub4u.cricket%2F&kw=%5B%22hdhub4u%22%2C%22official%22%2C%22%E2%80%93%22%2C%22download%22%2C%22hd%22%2C%22movies%22%2C%22webseries%22%2C%22tv%22%2C%22shows%22%5D&key=f2be9c90610679b63bda38ac8758cd18&scrWidth=393&scrHeight=873&tz=5.5&v=25.3.2388&ship=&psid=hdhub4u.cricket,hdhub4u.cricket&sub3=invoke_layer&res=14.229&dev=r&uuid=e0b2201b-af38-42fc-a7d1-552475d6d2b3%3A2%3A1" alt="Movie 1">
+                <img src="https://image.tmdb.org/t/p/w342/41s42CRXafa3OuRGvCtfYPEBmse.jpg" alt="Movie 1">
                 <h4>Sikandar (2025) Full Movie 1080p</h4>
               </a>
               <a href="https://cinearena.github.io/Sikandar-DVD-HQ/">
