--- a/movies.html
+++ b/movies.html
@@ -198,8 +198,8 @@
     <!-- Menu Section -->
     <div class="menu">
         <a href="https://cinearena.live/">Sports</a>
-        <a href="#">Music</a>
-        <a href="#">Movies</a>
+        <a href="https://cinearena.github.io/music/">Music</a>
+        <a href="https://cinearena.live/movies/">Movies</a>
     </div>
 
     <!--search bar-->
