--- a/movies.html
+++ b/movies.html
@@ -199,7 +199,7 @@
     <div class="menu">
         <a href="https://cinearena.live/">Sports</a>
         <a href="https://cinearena.github.io/music/">Music</a>
-        <a href="https://cinearena.live/movies/">Movies</a>
+        <a href="https://cinearena.live/movies.html/">Movies</a>
     </div>
 
     <!--search bar-->
