--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <div class="menu">
         <a href="https://cinearena.live">Sports</a>
         <a href="https://cinearena.github.io/music/">Music</a>
-        <a href="https://cinearena.live/movies.html/">Movies</a>
+        <a href="https://cinearena.live/movies">Movies</a>
     </div>
    
         
