--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
         
 
         <div class='directory-item'>
-            <a href='tsports.html'><img src='tsports.jpg' alt='tsports'></a>
-            <a href='tsports.html'>T Sports</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1743931818~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUsVkrSGmHDEfnUgJmEHZ4tcsgqMXD5AYl_0TsjEZexu5ntHvHHmpLcjjWbkKsoP5ZzBxbR3roXO7nyZc3eRpK0K'><img src='tsports.jpg' alt='tsports'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1743931818~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUsVkrSGmHDEfnUgJmEHZ4tcsgqMXD5AYl_0TsjEZexu5ntHvHHmpLcjjWbkKsoP5ZzBxbR3roXO7nyZc3eRpK0K'>T Sports</a></div>
 
         <div class='directory-item'>
             <a href='wwe.html'><img src='wwe.jpg' alt='wwe'></a>
