--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
             <a href='ipltelgu.html'>IPL Telugu</a></div>
 
         <div class='directory-item'>
-            <a href='iplkanad.html'><img src='kanad.jpg' alt='IPL Kanad'></a>
-            <a href='iplkanad.html'>IPL Kanad</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_KAN_IDC_MOB/Fallback/index.m3u8'><img src='kanad.jpg' alt='IPL Kanad'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_KAN_IDC_MOB/Fallback/index.m3u8'>IPL Kanad</a></div>
         
 
        <!--
