--- a/index.html
+++ b/index.html
@@ -224,13 +224,18 @@
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_ENG_IDC_MOB/Fallback/index.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_ENG_IDC_MOB/Fallback/index.m3u8'>IPL English</a></div>
 
+	    <div class='directory-item'>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'>IPL Bhojpuri</a></div>
+	    
+
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_TAM_IDC_MOB/Fallback/index.m3u8'><img src='tamil.jpg' alt='IPL Tamil'></a>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_TAM_IDC_MOB/Fallback/index.m3u8'>IPL Tamil</a></div>
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'>IPL Bhojpuri</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_BEN_IDC_MOB/Fallback/index.m3u8'><img src='bengali.jpg' alt='Bengali'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_BEN_IDC_MOB/Fallback/index.m3u8'>IPL Bengali</a></div>
 
         <div class='directory-item'>
             <a href='ipltelgu.html'><img src='telgu.jpg' alt='IPL Telgu'></a>
