--- a/movies.html
+++ b/movies.html
@@ -231,6 +231,26 @@
                 <button class="watch-btn">Watch Now</button>
               </a>
             </div>
+
+            <div class="movie-card" data-title="Movie Title 3">
+              <a href="https://cinearena.github.io/pushpa-the-rise-2021/">
+                <img src="https://image.tmdb.org/t/p/w342/41s42CRXafa3OuRGvCtfYPEBmse.jpg" alt="Movie 3">
+                <h4>Pushpa: The Rise (2021) Full Movie 1080p</h4>
+              </a>
+              <a href="https://cinearena.github.io/pushpa-the-rise-2021/">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+            </div>
+
+            <div class="movie-card" data-title="Movie Title 4">
+              <a href="https://cinearena.github.io/pushpa2-the-rise/">
+                <img src="https://catimages.org/images/2025/01/30/Pushpa-2-The-Rule-RELOADED-2024-HDHub4u.Tv.jpg" alt="Movie 4">
+                <h4>Pushpa 2: The Rise (2021) Full Movie 1080p</h4>
+              </a>
+              <a href="https://cinearena.github.io/pushpa2-the-rise/">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+            </div>
             
         </div>
     </section>
