--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743863214~acl=/*~hmac=3355d2520c1e9982635a8f9e5b868e9ac87cbe7a6f1acaa22b95454a85406196'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_ENG_IDC_MOB/Fallback/index.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_ENG_IDC_MOB/Fallback/index.m3u8'>IPL English</a></div>
+            <a href='https://cricstream4u.github.io/willow1/'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://cricstream4u.github.io/willow1/'>IPL English</a></div>
 
 	    <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
