--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1743950818~acl=%2f*~data=hdntl~hmac=ace17263b1b517a1634cb94f6fa526a6eeb0119384e4e6ae91c9b84068d08928/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1743950818~acl=%2f*~data=hdntl~hmac=ace17263b1b517a1634cb94f6fa526a6eeb0119384e4e6ae91c9b84068d08928/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1743950818~acl=%2f*~data=hdntl~hmac=ace17263b1b517a1634cb94f6fa526a6eeb0119384e4e6ae91c9b84068d08928/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
