--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
         
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1743950818~acl=%2f*~data=hdntl~hmac=ace17263b1b517a1634cb94f6fa526a6eeb0119384e4e6ae91c9b84068d08928/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1743950818~acl=%2f*~data=hdntl~hmac=ace17263b1b517a1634cb94f6fa526a6eeb0119384e4e6ae91c9b84068d08928/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'>IPL Hindi</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743878079~acl=/*~hmac=e3616f7a5482a241b0dfdba8e1d9b9cb15fe6b423a4661f0dd44f567e92443da'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743878079~acl=/*~hmac=e3616f7a5482a241b0dfdba8e1d9b9cb15fe6b423a4661f0dd44f567e92443da'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1743931818~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUsVkrSGmHDEfnUgJmEHZ4tcsgqMXD5AYl_0TsjEZexu5ntHvHHmpLcjjWbkKsoP5ZzBxbR3roXO7nyZc3eRpK0K'><img src='ipleng.jpg' alt='IPL English'></a>
