--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
             <a href='willow2eng.html'>Willow 2 English</a></div>
          --> 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743863214~acl=/*~hmac=3355d2520c1e9982635a8f9e5b868e9ac87cbe7a6f1acaa22b95454a85406196'><img src='star2.jpg' alt='Star 1 HD'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743863214~acl=/*~hmac=3355d2520c1e9982635a8f9e5b868e9ac87cbe7a6f1acaa22b95454a85406196'>Star Sports2 Hindi</a></div>
+            <a href='https://cricstream4u.github.io/nplayer/?url=https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002'><img src='star1hd.jpg' alt='Star 1 HD'></a>
+            <a href='https://cricstream4u.github.io/nplayer/?url=https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002'>Star Sports1 Hindi</a></div>
         <!--
         <div class='directory-item'>
             <a href='starsports2hindi.html'><img src='star2.jpg' alt='Star Sports 2'></a>
