--- a/movies.html
+++ b/movies.html
@@ -215,6 +215,17 @@
     <section class="latest-released">
         <h3>Latest Released Movie</h3>
         <div class="movie-grid" id="movieGrid">
+
+	    <div class="movie-card" data-title="TEST (2025) Full Movie Hindi Dubbed">
+              <a href="https://cinearena.github.io/TEST-2025-FULL-MOVIE/">
+                <img src="https://image.tmdb.org/t/p/w400/8jZaBr3dTIW8N4D6F4Cprssfm7V.jpg" alt="Movie 2">
+                <h4>TEST (2025) Full Movie Hindi Dubbed</h4>
+              </a>
+              <a href="https://cinearena.github.io/TEST-2025-FULL-MOVIE/">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+	    </div>
+		
             <div class="movie-card" data-title="The Deplomat (2025) Full Movie 1080p">
               <a href="https://cinearena.github.io/The-Diplomat-Full-Movie/">
                 <img src="https://image.tmdb.org/t/p/w500/uwl9Y4px8TTIQK4N19k6gnW1RnX.jpg" alt="Movie 2">
