--- a/movies.html
+++ b/movies.html
@@ -283,15 +283,29 @@
         <a href="https://cinearena.live/movies">Movies</a>
     </div>
 
-    <!--search bar-->
-    <div class="search-container">
-        <input type="text" id="search" class="search-box" placeholder="Search movies...">
-    </div>
+
+    <div class="file-container">
+        <div class='directory-item'>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://epiconvh.akamaized.net/live/showbox/master.m3u8'><img src='sonypix.jpg' alt='sony pix'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://epiconvh.akamaized.net/live/showbox/master.m3u8'>Sony Pix</a>
+        </div>
+
+	<div class='directory-item'>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/9XM/video.m3u8'><img src='sonymax.jpg' alt='sony max'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/9XM/video.m3u8'>Sony Max</a>
+	</div>
+
+
 
     <!-- latest movies-->
     <section class="latest-released">
         <h3>Latest Released Movie</h3>
         <div class="movie-grid" id="movieGrid">
+
+		    <!--search bar-->
+       <div class="search-container">
+            <input type="text" id="search" class="search-box" placeholder="Search movies...">
+       </div>
 
 	    <div class="movie-card" data-title="TEST (2025) Full Movie Hindi Dubbed">
               <a href="https://cinearena.github.io/TEST-2025-FULL-MOVIE/">
