--- a/movies.html
+++ b/movies.html
@@ -286,13 +286,13 @@
 
     <div class="file-container">
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://epiconvh.akamaized.net/live/showbox/master.m3u8'><img src='sonypix.jpg' alt='sony pix'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://epiconvh.akamaized.net/live/showbox/master.m3u8'>Sony Pix</a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/SonyPixHD/video.m3u8'><img src='sonypix.jpg' alt='sony pix'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/SonyPixHD/video.m3u8'>Sony Pix</a>
         </div>
 
 	<div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/9XM/video.m3u8'><img src='sonymax.jpg' alt='sony max'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/9XM/video.m3u8'>Sony Max</a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/sonymaxhd/video.m3u8'><img src='sonymax.jpg' alt='sony max'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/sonymaxhd/video.m3u8'>Sony Max</a>
 	</div>
 
 
