--- a/movies.html
+++ b/movies.html
@@ -293,6 +293,18 @@
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/sonymaxhd/video.m3u8'>Sony Max</a>
 	</div>
 
+	    <div class='directory-item'>
+            <a href='https://d35j504z0x2vu2.cloudfront.net/v1/manifest/0bc8e8376bd8417a1b6761138aa41c26c7309312/bollywood-hd/43e99595-3ab3-4f82-a828-0d32dc308c98/0.m3u8'><img src='bollywoodhd.jpg' alt='Bollywood HD'></a>
+            <a href='https://d35j504z0x2vu2.cloudfront.net/v1/manifest/0bc8e8376bd8417a1b6761138aa41c26c7309312/bollywood-hd/43e99595-3ab3-4f82-a828-0d32dc308c98/0.m3u8'>Bollywood HD</a>
+        </div>
+
+	<div class='directory-item'>
+            <a href='https://amg01448-samsungin-enterr10bangla-samsungin-ad-gg.amagi.tv/playlist/amg01448-samsungin-enterr10bangla-samsungin/playlist.m3u8'><img src='enter10bangla.jpg' alt='Enterr10 Bangla'></a>
+            <a href='https://amg01448-samsungin-enterr10bangla-samsungin-ad-gg.amagi.tv/playlist/amg01448-samsungin-enterr10bangla-samsungin/playlist.m3u8'>Enterr10 Bangla</a>
+	</div>
+
+    </div>
+
 
 
     <!-- latest movies-->
