--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
     <div class='file-container'>
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1744038028~acl=%2f*~data=hdntl~hmac=8ff4c744a6b8639ea2aa8e1244629776a86bd2e13c28115a74d5d0256cacd8ca/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1744038028~acl=%2f*~data=hdntl~hmac=8ff4c744a6b8639ea2aa8e1244629776a86bd2e13c28115a74d5d0256cacd8ca/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'>IPL Hindi</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://vkvsd250.okcdn.ru/cmaf/8177201777196/sig/EvKkpj5PoHM/expires/1744033303404/srcIp/172.69.86.76/urls/45.136.22.65/clientType/13/srcAg/CHROME/mid/9469206211372/get/hls_9469206211372.VaRDHyXezr0.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://vkvsd250.okcdn.ru/cmaf/8177201777196/sig/EvKkpj5PoHM/expires/1744033303404/srcIp/172.69.86.76/urls/45.136.22.65/clientType/13/srcAg/CHROME/mid/9469206211372/get/hls_9469206211372.VaRDHyXezr0.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744034116~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUuiAwKIFdvmmj9vCGar-BhovM3_u1Mu7it5uNt9FeIUOfcADZOxuP-k6vi5ri_Ma_qD-FCmS04DGOvuhP7WgYAF'><img src='ipleng.jpg' alt='IPL English'></a>
