--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
             <a href='https://cricstream4u.github.io/crictv/star1hindi.html'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744034116~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUuiAwKIFdvmmj9vCGar-BhovM3_u1Mu7it5uNt9FeIUOfcADZOxuP-k6vi5ri_Ma_qD-FCmS04DGOvuhP7WgYAF'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744034116~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUuiAwKIFdvmmj9vCGar-BhovM3_u1Mu7it5uNt9FeIUOfcADZOxuP-k6vi5ri_Ma_qD-FCmS04DGOvuhP7WgYAF'>IPL English</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'>IPL English</a></div>
 <!--
 	    <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
