--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
         -->
 
 	    <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744034116~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUuiAwKIFdvmmj9vCGar-BhovM3_u1Mu7it5uNt9FeIUOfcADZOxuP-k6vi5ri_Ma_qD-FCmS04DGOvuhP7WgYAF'><img src='tsports.jpg' alt='tsports'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744034116~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUuiAwKIFdvmmj9vCGar-BhovM3_u1Mu7it5uNt9FeIUOfcADZOxuP-k6vi5ri_Ma_qD-FCmS04DGOvuhP7WgYAF'>T Sports</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='tsports.jpg' alt='tsports'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'>T Sports</a></div>
 
 
 	    
