--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
     <div class='file-container'>
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/crictv/star1hindi.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cricstream4u.github.io/crictv/star1hindi.html'>IPL Hindi</a></div>
+            <a href='https://userv4537.ifrem.net/iframe/frame.php'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://userv4537.ifrem.net/iframe/frame.php'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='ipleng.jpg' alt='IPL English'></a>
