--- a/jwplyr.html
+++ b/jwplyr.html
@@ -137,16 +137,18 @@
     <!-- 720*90 banner ads-->
    
     <div class="sticky-footer">
-    <script type="text/javascript">
-	atOptions = {
-		'key' : 'd57705b1f5d0f7abbb19cdb5dfe61249',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-   </script>
-   <script type="text/javascript" src="//carryglanced.com/d57705b1f5d0f7abbb19cdb5dfe61249/invoke.js"></script>
+      <script>
+        (function(kbdj){
+        var d = document,
+        s = d.createElement('script'),
+        l = d.scripts[d.scripts.length - 1];
+        s.settings = kbdj || {};
+        s.src = "\/\/dijysata.com\/bpX-V.sXdOGLlE0_YMWDcW\/seFml9Du\/ZIUOlVkFPAThY_yXMFz\/Ex5INXDoYvtJNRj\/ItzyMdTTkK0ENswk";
+        s.async = true;
+        s.referrerPolicy = 'no-referrer-when-downgrade';
+        l.parentNode.insertBefore(s, l);
+        })({})
+    </script>
     </div>
 
 <br>
