--- a/jwplyr.html
+++ b/jwplyr.html
@@ -134,21 +134,35 @@
 <!-- native ads
  <script async="async" data-cfasync="false" src="//carryglanced.com/2346ffc02acfb9eb4451708a5df9f609/invoke.js"></script>
 <div id="container-2346ffc02acfb9eb4451708a5df9f609"></div>
+
+
+	<!-- Slider ads-->
+	<script>
+(function(gz){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = gz || {};
+s.src = "\/\/dijysata.com\/bfX.Vjs\/d\/GLld0gYqW\/cW\/we\/m\/9zuhZoUDlLkrPuTsYvyaNcDnIV4ZMqzHcftcNBjOI\/0cM_jDgEzTO\/Am";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+	</script>
+	
     <!-- 720*90 banner ads-->
    
     <div class="sticky-footer">
-      <script>
-        (function(kbdj){
-        var d = document,
-        s = d.createElement('script'),
-        l = d.scripts[d.scripts.length - 1];
-        s.settings = kbdj || {};
-        s.src = "\/\/dijysata.com\/bpX-V.sXdOGLlE0_YMWDcW\/seFml9Du\/ZIUOlVkFPAThY_yXMFz\/Ex5INXDoYvtJNRj\/ItzyMdTTkK0ENswk";
-        s.async = true;
-        s.referrerPolicy = 'no-referrer-when-downgrade';
-        l.parentNode.insertBefore(s, l);
-        })({})
-    </script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'd57705b1f5d0f7abbb19cdb5dfe61249',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+   </script>
+   <script type="text/javascript" src="//carryglanced.com/d57705b1f5d0f7abbb19cdb5dfe61249/invoke.js"></script>
     </div>
 
 <br>
