--- a/jwplyr.html
+++ b/jwplyr.html
@@ -136,6 +136,24 @@
  <script async="async" data-cfasync="false" src="//carryglanced.com/2346ffc02acfb9eb4451708a5df9f609/invoke.js"></script>
 <div id="container-2346ffc02acfb9eb4451708a5df9f609"></div>
 
+	-->
+	<br>
+<!-- cine banner -->
+    <div>
+	    <script>
+(function(rthnw){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = rthnw || {};
+s.src = "\/\/dijysata.com\/btXpVfs\/d.GllX0pYCWOcq\/DeKmW9dusZnUJl_kaPJTlYSyHMpzsES5MNoDUYztNNGjJIszPMqT\/k\/0bNMwR";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+	    </script>
+    </div>
+	
 
 	<!-- Slider ads-->
 	<script>
