--- a/jwplyr.html
+++ b/jwplyr.html
@@ -139,6 +139,7 @@
 	-->
 	<br>
 <!-- cine banner -->
+	<center>
     <div>
 	    <script>
 (function(rthnw){
@@ -152,7 +153,7 @@ s.referrerPolicy = 'no-referrer-when-downgrade';
 l.parentNode.insertBefore(s, l);
 })({})
 	    </script>
-    </div>
+    </div></center>
 	
 
 	<!-- Slider ads-->
