--- a/movies.html
+++ b/movies.html
@@ -290,7 +290,7 @@
 	</div>
 
 	<div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-bhojpuri.akamaized.net/liveabr/playlist.m3u8'><img src='bhpcimena.jpg' alt='Bhojpuri Cinema'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-bhojpuri.akamaized.net/liveabr/playlist.m3u8'><img src='bhpcinema.jpg' alt='Bhojpuri Cinema'></a>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://live-bhojpuri.akamaized.net/liveabr/playlist.m3u8'>Bhojpuri Cinema</a>
 	</div>
 	    
