--- a/movies.html
+++ b/movies.html
@@ -322,7 +322,17 @@
        </div>
         <div class="movie-grid" id="movieGrid">
 
-		    
+
+
+	<div class="movie-card" data-title="Kaafir (2025) Full Movie in Hindi">
+              <a href="https://cinearena.github.io/Kaafir-2025/">
+                <img src="https://image.tmdb.org/t/p/w400/j804CKMJGCFLxAJsKaCR9cFh0Ey.jpg" alt="Movie 2">
+                <h4>Kaafir (2025) Full Movie in Hindi</h4>
+              </a>
+              <a href="https://cinearena.github.io/Kaafir-2025/">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+	</div>
 
 	    <div class="movie-card" data-title="TEST (2025) Full Movie Hindi Dubbed">
               <a href="https://cinearena.github.io/TEST-2025-FULL-MOVIE/">
