--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
     <div class='file-container'>
 
         <div class='directory-item'>
-            <a href='https://cinearena.live/jwplyr?file=https://vkvsd251.okcdn.ru/cmaf/8177201777196/sig/fHc85OffGp0/srcIp/172.69.87.73/urls/45.136.22.65/expires/1744491270975/clientType/13/srcAg/CHROME/fromCache/1/mid/9469206211372/id/8177201777196/get/hls_9469206211372.VaRDHyXezr0.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cinearena.live/jwplyr?file=https://vkvsd251.okcdn.ru/cmaf/8177201777196/sig/fHc85OffGp0/srcIp/172.69.87.73/urls/45.136.22.65/expires/1744491270975/clientType/13/srcAg/CHROME/fromCache/1/mid/9469206211372/id/8177201777196/get/hls_9469206211372.VaRDHyXezr0.m3u8'>IPL Hindi</a></div>
+            <a href='https://cinearena.live/jwplyr?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cinearena.live/jwplyr?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='ipleng.jpg' alt='IPL English'></a>
