--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       
            </div>
 
-	<!-- Vast slider ads -->
+	<!-- Vast slider ads 
 	<script>
            (function(jqp){
            var d = document,
@@ -331,6 +331,7 @@
            l.parentNode.insertBefore(s, l);
            })({})
 	</script>
+	    -->
         <br>
 	<br>
 	<br>
