--- a/jwplyr.html
+++ b/jwplyr.html
@@ -138,7 +138,7 @@
 
 	-->
 	<br>
-<!-- cine banner -->
+<!-- cine banner 
 	<center>
     <div>
 	    <script>
@@ -156,7 +156,7 @@ l.parentNode.insertBefore(s, l);
     </div></center>
 	
 
-	<!-- Slider ads-->
+	 Slider ads
 	<script>
 (function(gz){
 var d = document,
@@ -170,7 +170,7 @@ l.parentNode.insertBefore(s, l);
 })({})
 	</script>
 	
-    <!-- 720*90 banner ads-->
+     720*90 banner ads-->
    
     <div class="sticky-footer">
     <script type="text/javascript">
