--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
             <a href='wwe.html'>WWE Network</a></div>
         
         <div class='directory-item'>
-            <a href='ptv.html'><img src='ptv1.jpg' alt='PTV'></a>
-            <a href='ptv.html'>PTV</a></div>
+            <a href='https://cinearena.live/jwplyr?file=https://re.fredflix.fun/playlist/eacf6c3f-0773-4bc3-a03a-cfee09f10348/playlist.m3u8'><img src='ptv1.jpg' alt='PTV'></a>
+            <a href='https://cinearena.live/jwplyr?file=https://re.fredflix.fun/playlist/eacf6c3f-0773-4bc3-a03a-cfee09f10348/playlist.m3u8'>PTV</a></div>
         
         <div class='directory-item'>
             <a href='geosuper.html'><img src='geosuper.jpg' alt='Geo Super'></a>
