--- a/iplhin.html
+++ b/iplhin.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743335134~acl=/*~hmac=080402fe4f075ebd3d8f5b4c97f99393e5fbfdc4a06dd7cddfbc717c6736fb84";
+    const hlsStreamUrl = getQueryParam("file") || "https://vkvsd251.okcdn.ru/cmaf/8177201777196/sig/fHc85OffGp0/srcIp/172.69.87.73/urls/45.136.22.65/expires/1744491270975/clientType/13/srcAg/CHROME/fromCache/1/mid/9469206211372/id/8177201777196/get/hls_9469206211372.VaRDHyXezr0.m3u8";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
