--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
     <div class='file-container'>
 
         <div class='directory-item'>
-            <a href='https://cinearena.live/jwplyr?file=https://vkvsd251.okcdn.ru/cmaf/8177201777196/sig/fHc85OffGp0/srcIp/172.69.87.73/urls/45.136.22.65/expires/1744491270975/clientType/13/srcAg/CHROME/fromCache/1/mid/9469206211372/id/8177201777196/get/hls_9469206211372.VaRDHyXezr0.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cinearena.live/jwplyr?file=https://vkvsd251.okcdn.ru/cmaf/8177201777196/sig/fHc85OffGp0/srcIp/172.69.87.73/urls/45.136.22.65/expires/1744491270975/clientType/13/srcAg/CHROME/fromCache/1/mid/9469206211372/id/8177201777196/get/hls_9469206211372.VaRDHyXezr0.m3u8'>IPL Hindi</a></div>
+            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-hin-fa.jiocinema.com/hls/live/2117033/inallow-ipl-2025/hin/1540040243/15mindvrm01f15d6223ccd742da93085a408526bb9c09april2025/master.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-hin-fa.jiocinema.com/hls/live/2117033/inallow-ipl-2025/hin/1540040243/15mindvrm01f15d6223ccd742da93085a408526bb9c09april2025/master.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744291333~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUtXDfHVSh9w1GS8m4oiiE11bcCqaRu-ccnE-5WIAyErWoDJLmMwt3_9bWFp0HLOoefA6ocsT1w5etBsfR0HJcAH'><img src='ipleng.jpg' alt='IPL English'></a>
