--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
             <a href='https://cinearena.live/jwplyr?file=https://prod-sports-hin-fa.jiocinema.com/hls/live/2117033/inallow-ipl-2025/hin/1540040243/15mindvrm01f15d6223ccd742da93085a408526bb9c09april2025/master.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744291333~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUtXDfHVSh9w1GS8m4oiiE11bcCqaRu-ccnE-5WIAyErWoDJLmMwt3_9bWFp0HLOoefA6ocsT1w5etBsfR0HJcAH'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744291333~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUtXDfHVSh9w1GS8m4oiiE11bcCqaRu-ccnE-5WIAyErWoDJLmMwt3_9bWFp0HLOoefA6ocsT1w5etBsfR0HJcAH'>IPL English</a></div>
+            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-eng-fa.jiocinema.com/hls/live/2117030/inallow-ipl-2025/eng/1540040243/15mindvrm01f15d6223ccd742da93085a408526bb9c09april2025/master.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-eng-fa.jiocinema.com/hls/live/2117030/inallow-ipl-2025/eng/1540040243/15mindvrm01f15d6223ccd742da93085a408526bb9c09april2025/master.m3u8'>IPL English</a></div>
 <!--
 	    <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
