--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
         <div class='directory-item'>
             <a href='willow2eng.html'><img src='willow2eng.jpg' alt='Willow 2'></a>
             <a href='willow2eng.html'>Willow 2 English</a></div>
-         
+         -->
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/nplayer/?url=https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002'><img src='star1hd.jpg' alt='Star 1 HD'></a>
-            <a href='https://cricstream4u.github.io/nplayer/?url=https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002'>Star Sports1 Hindi</a></div>
-        
+            <a href='https://cinearena.live/jwplyr?file=https://i.joinus-apiworker.workers.dev/m3u8?v=star1hi'><img src='star1hd.jpg' alt='Star 1 HD'></a>
+            <a href='https://cinearena.live/jwplyr?file=https://i.joinus-apiworker.workers.dev/m3u8?v=star1hi'>Star Sports1 Hindi</a></div>
+        <!--
         <div class='directory-item'>
             <a href='https://cinearena.live/jwplyr?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1744190417~acl=%2f*~data=hdntl~hmac=30ee0759b03cdf4772c816cb38539d8a7aaede4e8c1e24d7951fd5cf6c4e9a7d/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'><img src='star2.jpg' alt='Star Sports 2'></a>
             <a href='https://cinearena.live/jwplyr?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1744190417~acl=%2f*~data=hdntl~hmac=30ee0759b03cdf4772c816cb38539d8a7aaede4e8c1e24d7951fd5cf6c4e9a7d/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'>Star Sports 2 Hindi</a></div>
