--- a/index.html
+++ b/index.html
@@ -202,19 +202,19 @@
 	    <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'>IPL Bhojpuri</a></div>
-	   
+	-->   
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/crictv/ipltamil.html'><img src='tamil.jpg' alt='IPL Tamil'></a>
-            <a href='https://cricstream4u.github.io/crictv/ipltamil.html'>IPL Tamil</a></div>
+            <a href='ipltamil.html'><img src='tamil.jpg' alt='IPL Tamil'></a>
+            <a href='ipltamil.html'>IPL Tamil</a></div>
 <!--
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_BEN_IDC_MOB/Fallback/index.m3u8'><img src='bengali.jpg' alt='Bengali'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_BEN_IDC_MOB/Fallback/index.m3u8'>IPL Bengali</a></div>
-
+            <a href='ipltamil'><img src='bengali.jpg' alt='Bengali'></a>
+            <a href='ipltamil'>IPL Bengali</a></div>
+-->
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/crictv/ipltelgu.html'><img src='telgu.jpg' alt='IPL Telgu'></a>
-            <a href='https://cricstream4u.github.io/crictv/ipltelgu.html'>IPL Telugu</a></div>
+            <a href='ipltelgu.html'><img src='telgu.jpg' alt='IPL Telgu'></a>
+            <a href='ipltelgu.html'>IPL Telugu</a></div>
 <!--
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_KAN_IDC_MOB/Fallback/index.m3u8'><img src='kanad.jpg' alt='IPL Kanad'></a>
