--- a/iplhin.html
+++ b/iplhin.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://vkvsd251.okcdn.ru/cmaf/8177201777196/sig/fHc85OffGp0/srcIp/172.69.87.73/urls/45.136.22.65/expires/1744491270975/clientType/13/srcAg/CHROME/fromCache/1/mid/9469206211372/id/8177201777196/get/hls_9469206211372.VaRDHyXezr0.m3u8";
+    const hlsStreamUrl = getQueryParam("file") || "https://001.fclplayer.net/live/csstream2/playlist.m3u8?id=1002&pk=69908e7e61f4b6348706325e4656e3d40dc3028e6198ed0a98917843c2ca41d1";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
