--- a/ipleng.html
+++ b/ipleng.html
@@ -43,7 +43,7 @@
     <script src="//content.jwplatform.com/libraries/IDzF9Zmk.js"></script>
     <script>
         jwplayer("player").setup({
-            file: 'https://004.fclplayer.online/live/csstream1/playlist.m3u8?id=1001&pk=44aafd76ac858d3c6ecea72daf127e32a2fcfd53a71f07de55a837a5e164f3c2',
+            file: 'https://re.fredflix.fun/playlist/f064e069-8861-43d5-ac79-828b029a50a1/playlist.m3u8',
             width: '100%',
             aspectratio: '16:9',
             autostart: true,
