--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
     <div class='file-container'>
 
         <div class='directory-item'>
-            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-hin-fa.jiocinema.com/hls/live/2117033/inallow-ipl-2025/hin/1540040243/15mindvrm01f15d6223ccd742da93085a408526bb9c09april2025/master.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-hin-fa.jiocinema.com/hls/live/2117033/inallow-ipl-2025/hin/1540040243/15mindvrm01f15d6223ccd742da93085a408526bb9c09april2025/master.m3u8'>IPL Hindi</a></div>
+            <a href='iplhin.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='iplhin'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-eng-fa.jiocinema.com/hls/live/2117030/inallow-ipl-2025/eng/1540040243/15mindvrm01f15d6223ccd742da93085a408526bb9c09april2025/master.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-eng-fa.jiocinema.com/hls/live/2117030/inallow-ipl-2025/eng/1540040243/15mindvrm01f15d6223ccd742da93085a408526bb9c09april2025/master.m3u8'>IPL English</a></div>
+            <a href='ipleng.html'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='ipleng.html'>IPL English</a></div>
 <!--
 	    <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
