--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
             <a href='iplhin'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='ipleng.html'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='ipleng.html'>IPL English</a></div>
+            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744291333~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUtXDfHVSh9w1GS8m4oiiE11bcCqaRu-ccnE-5WIAyErWoDJLmMwt3_9bWFp0HLOoefA6ocsT1w5etBsfR0HJcAH'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744291333~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUtXDfHVSh9w1GS8m4oiiE11bcCqaRu-ccnE-5WIAyErWoDJLmMwt3_9bWFp0HLOoefA6ocsT1w5etBsfR0HJcAH'>IPL English</a></div>
 <!--
 	    <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
