--- a/ipleng.html
+++ b/ipleng.html
@@ -41,7 +41,7 @@
     <script src="//content.jwplatform.com/libraries/IDzF9Zmk.js"></script>
     <script>
         jwplayer("player").setup({
-            file: 'https://re.fredflix.fun/playlist/f064e069-8861-43d5-ac79-828b029a50a1/playlist.m3u8',
+            file: 'https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744291333~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUtXDfHVSh9w1GS8m4oiiE11bcCqaRu-ccnE-5WIAyErWoDJLmMwt3_9bWFp0HLOoefA6ocsT1w5etBsfR0HJcAH',
             width: '100%',
             aspectratio: '16:9',
             autostart: true,
