--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
         -->
 
 	    <div class='directory-item'>
-            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744291333~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUtXDfHVSh9w1GS8m4oiiE11bcCqaRu-ccnE-5WIAyErWoDJLmMwt3_9bWFp0HLOoefA6ocsT1w5etBsfR0HJcAH'><img src='tsports.jpg' alt='tsports'></a>
-            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/master_720.m3u8?hdntl=Expires=1744291333~_GO=Generated~URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Signature=AVTZpUtXDfHVSh9w1GS8m4oiiE11bcCqaRu-ccnE-5WIAyErWoDJLmMwt3_9bWFp0HLOoefA6ocsT1w5etBsfR0HJcAH'>T Sports</a></div>
+            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='tsports.jpg' alt='tsports'></a>
+            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'>T Sports</a></div>
 
 
 	    
