--- a/ipl.html
+++ b/ipl.html
@@ -185,7 +185,7 @@
    
         
         <div class='directory-item'>
-            <a href='ptv.html'><img src='iplhindi.jpg' alt='IPL Hindi'></a>
+            <a href='ptv.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
             <a href='ptv.html'>IPL Hindi</a></div>
         
         <div class='directory-item'>
