--- a/ipl.html
+++ b/ipl.html
@@ -182,7 +182,7 @@
         <a href="https://cinearena.github.io/music/">Music</a>
         <a href="https://cinearena.live/movies">Movies</a>
     </div>
-   <div class='.file-container'>
+   <div class='file-container'>
         
         <div class='directory-item'>
             <a href='https://cinearena.live/jwplyr?file=https://prod-sports-hin-fa.jiocinema.com/hls/live/2117033/inallow-ipl-2025/hin/1540040246/15mindvrm0153748b1625e24a9ebc935a7faca3fe7810april2025/master.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
