--- a/ipl.html
+++ b/ipl.html
@@ -185,8 +185,8 @@
    <div class='file-container'>
         
         <div class='directory-item'>
-            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-hin-fa.jiocinema.com/hls/live/2117033/inallow-ipl-2025/hin/1540040246/15mindvrm0153748b1625e24a9ebc935a7faca3fe7810april2025/master.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cinearena.live/jwplyr?file=https://prod-sports-hin-fa.jiocinema.com/hls/live/2117033/inallow-ipl-2025/hin/1540040246/15mindvrm0153748b1625e24a9ebc935a7faca3fe7810april2025/master.m3u8'>IPL Hindi</a></div>
+            <a href='iplhin.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='iplhin.html'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cinearena.live/jwplyr?file=https://prod-sports-eng-fa.jiocinema.com/hls/live/2117030/inallow-ipl-2025/eng/1540040246/15mindvrm0153748b1625e24a9ebc935a7faca3fe7810april2025/master_apm.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
@@ -237,8 +237,8 @@
         -->
 
 	    <div class='directory-item'>
-            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='tsports.jpg' alt='tsports'></a>
-            <a href='https://cinearena.live/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'>T Sports</a>
+            <a href='https://cricstream4u.github.io/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='tsports.jpg' alt='tsports'></a>
+            <a href='https://cricstream4u.github.io/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'>T Sports</a>
 	    </div>
 
       
