--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- Menu Section -->
     <div class="menu">
         <a href="https://cinearena.live">Sports</a>
-        <a href="https://cinearena.live/music.html/">Music</a>
+        <a href="https://cinearena.live/music">Music</a>
         <a href="https://cinearena.live/movies">Movies</a>
     </div>
    
