--- a/psl.html
+++ b/psl.html
@@ -186,8 +186,8 @@
    
         
         <div class='directory-item'>
-            <a href='ptv.html'><img src='ptv1.jpg' alt='PTV Sports'></a>
-            <a href='ptv.html'>PTV</a></div>
+            <a href='ptv2.html'><img src='ptv1.jpg' alt='PTV Sports'></a>
+            <a href='ptv2.html'>PTV</a></div>
 
 	    <div class='directory-item'>
             <a href='sony-network.html'><img src='sony.jpg' alt='Sony Network'></a>
