--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
             <a href='willowsports.html'>Willow Sports</a></div>
         
 
+	    <div class='directory-item'>
+            <a href='wwetnt.html'><img src='wwelive.jpg' alt='wwe live'></a>
+            <a href='wwetnt.html'>WWE Live</a></div>
         
         <div class='directory-item'>
             <a href='wwe.html'><img src='wwe.jpg' alt='wwe'></a>
