--- a/psl.html
+++ b/psl.html
@@ -192,7 +192,7 @@
             <a href='ptv.html'><img src='ptv1.jpg' alt='PTV Sports'></a>
             <a href='ptv.html'>PTV</a></div>
 
-	    <div class='directory-item'>
+	<!--    <div class='directory-item'>
             <a href='sony-network.html'><img src='sony.jpg' alt='Sony Network'></a>
             <a href='sony-network.html'>Sony Network</a></div>
         
